--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "twilio": "^3.39.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
